--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -1,8 +1,12 @@
 absl-py==1.4.0
 astunparse==1.6.3
+blinker==1.6.2
 cachetools==5.3.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+Flask==2.3.2
 flatbuffers==23.5.9
 gast==0.4.0
 google-auth==2.18.1
@@ -11,7 +15,9 @@ google-pasta==0.2.0
 grpcio==1.54.2
 h5py==3.8.0
 idna==3.4
+itsdangerous==2.1.2
 jax==0.4.10
+Jinja2==3.1.2
 keras==2.12.0
 libclang==16.0.0
 Markdown==3.4.3
