--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.4.0
+asgiref==3.7.2
 astunparse==1.6.3
 blinker==1.6.2
 cachetools==5.3.0
@@ -6,6 +7,8 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+Django==4.2.2
+djangorestframework==3.14.0
 Flask==2.3.2
 flatbuffers==23.5.9
 gast==0.4.0
@@ -31,12 +34,14 @@ Pillow==9.5.0
 protobuf==4.23.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pytz==2023.3
 requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-video==1.1.11
 scipy==1.10.1
 six==1.16.0
+sqlparse==0.4.4
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
 tensorflow==2.12.0
@@ -45,6 +50,7 @@ tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 typing_extensions==4.5.0
+tzdata==2023.3
 urllib3==1.26.15
 Werkzeug==2.3.4
 wrapt==1.14.1
